7181438: [OGL] Incorrect alpha used, during blit from SW to the texture

Reviewed-by: prr, campbell